[metadata]
name = mask_plasmid
author = Anders Goncalves da Silva
author-email = andersgs@gmail.com
summary = Configurable retrying.
description-file = README.md
home-page = https://github.com/andersgs/mask_plasmid
license = 'GPLv3'
python_requires = ">=3.6"
classifier =
    'Intended Audience :: Developers'
    'Natural Language :: English'
    'Programming Language :: Python'
    'Programming Language :: Python :: 3.6'
    'Programming Language :: Python :: 3.7'
long_description_content_type = 'text/markdown'

[entry_points]
console_scripts =
    mask-plasmid = mask_plasmid.run_mask_plasmid:run_mask

[files]
packages =
    mask_plasmid

[wheel]
universal = 1