[metadata]
name = mask_plasmid
author = Anders Goncalves da Silva
author-email = andersgs@gmail.com
summary = Configurable retrying.
description-file = README.md
home-page = https://github.com/andersgs/mask_plasmid
python_requires = >=3.6
classifier =
    Topic :: Scientific/Engineering :: Bio-Informatics
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
long_description_content_type = text/markdown

[entry_points]
console_scripts =
    mask-plasmid = mask_plasmid.run_mask_plasmid:run_mask

[files]
packages =
    mask_plasmid

[wheel]
universal = 1